--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="principal container">
     <h1> Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+    <img src="Combo 2.png" alt="O Combo+ é a junção do Alura+ e o Alura Língua.">
+    <a href="www.alura.com.br" class="container-botal">Assine po 12x de R$120,00*</a>
+</section>
+
+<section>
+<img src="Buttons.png" alt="">
+</section>
+
+<section>
+    <img src="computador.png" alt="">
+</section>
 </body>
 </html>
