--- a/index.html
+++ b/index.html
@@ -26,14 +26,29 @@
 </div>
 </section>
 
-<section class="container-secundario">
-<div class="container descrição">
+<section class="container secundario">
     <img class="secundario-imagem" src="Plataformas.png" alt="um monitor e um celular com o alura plus aberto">
+<div class="container-descrição">
 <h2 class="descrição-titulo">Assista do seu jeito</h2>
 <p class="descrição-texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
-
 </div>
 </section>
 
+<section class="container secundario">
+<div class="container-descrição">
+    <p class="descrição-texto">Só o Combo+ oferece Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+<a href="www.alura.com.br" class="container-botao">Assine o Combo+</a>
+</div>
+<img src="Telas.png" alt="Tela da Alura plus e da Alura Línguas" class="secundario-imagem">
+</section>
+
+<section class="container secundario">
+<img src="Notebook.png" class="secundario-imagem" alt="">
+<div class="container-descrição">
+<h2 class="descrição-titulo">Baixe seus cursos</h2>
+<p class="descrição-texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+</div>
+
+</section>
 </body>
 </html>
