--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <section class="container secundario">
 <div class="container-descrição">
     <p class="descrição-texto">Só o Combo+ oferece Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-<a href="www.alura.com.br" class="container-botao">Assine o Combo+</a>
+<a href="www.alura.com.br" class="container-botao secundario-botao">Assine o Combo+</a>
 </div>
 <img src="Telas.png" alt="Tela da Alura plus e da Alura Línguas" class="secundario-imagem">
 </section>
