--- a/index.html
+++ b/index.html
@@ -48,7 +48,64 @@
 <h2 class="descrição-titulo">Baixe seus cursos</h2>
 <p class="descrição-texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
 </div>
-
 </section>
+
+<section class="dispositivos">
+<h2 class="dispositivos__titulo">Disponível nos seus dipositivos preferidos</h2>
+<ul class="dispositivo__lista">
+<li>
+   <img src="tv.png" alt="ícone de televisão"> 
+   <h3 class="lista__item">Tv</h3>
+</li>
+<li>
+    <img src="computador.png" alt="ícone de computador">
+    <h3 class="lista__item">Computador</h3>
+</li>
+<li>
+    <img src="celular.png" alt="ícone do celular">
+    <h3 class="lista__item">Celular</h3>
+</li>
+</ul>
+</section>
+
+<footer class="rodapé">
+<img src="Logo.png" alt="logo da alura mais" class="rodapé__logo">
+<ul class="rodapé__lista">
+    <li class="lista__link">
+    <a href="#">Idioma</a>
+</li>
+
+<li class="lista__link">
+<a href="#">Dispositivos compatíveis</a>
+</li>
+
+<li class="lista__link">
+    <a href="#">Idioma</a>
+</li>
+
+<li class="lista__link">
+<a href="#">Contratos de assinatura</a>
+</li>
+
+<li class="lista__link">
+    <a href="#">Política de privacidade</a>
+</li>
+
+<li class="lista__link">
+<a href="#">Proteção de dados Brasil</a>
+</li>
+
+<li class="lista__link">
+    <a href="#">Anúncios personalizados</a>
+</li>
+
+<li class="lista__link">
+    <a href="#">Ajuda</a>
+</li>
+
+</ul>
+<p class="rodapé__texto">texto 01</p>
+<p class="rodapé__texto">texto 02</p>
+</footer>
 </body>
 </html>
